--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
 
 <body>
     <h1>Edit the Form</h1>
-    <button><a href="/">Back to List</a></button>
+    <a href="/">Back to List</a>
 
     <form action="/<%=editItem.id%>?_method=PATCH" method="POST">
         <input type="text" id="item" name="item" value=<%=editItem.item%> required/>
