--- a/views/undefined.ejs
+++ b/views/undefined.ejs
@@ -1,4 +1,4 @@
 <%- include('header'); -%>
 <h1>Path is invalid, please try again.</h1>
-<button><a href="/">Back to List</a></button>
+<a href="/">Back to List</a>
 <%- include('footer'); -%>
